--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <!-- Navbar inicio -->
-    <nav class="navbar navbar-expand-md navbar-dark nav-inicio">
+    <header class="navbar navbar-expand-md navbar-dark nav-inicio">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <img src="./imgs/HORIZONTAL-COLOR-SIN-FONDO-1.png" alt="" class="img-fluid">
@@ -24,7 +24,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-flex justify-content-end" id="collapsibleNavbar">
+            <nav class="collapse navbar-collapse" id="collapsibleNavbar"> <!-- d-flex justify-content-end -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link fs-5 fw-bolder" href="index.html">Inicio</a>
@@ -42,9 +42,9 @@
                         <a class="nav-link fs-5 fw-bolder login" href="./pages/login.html">Login</a>
                     </li>
                 </ul>
-            </div>
+            </nav>
         </div>
-    </nav>
+    </header>
     <!-- Navbar fin -->
     <!-- Jumbotron inicio  -->
     <div class="p-5 jumbotron">
@@ -52,7 +52,7 @@
             <h1 class="fw-bold">Un Sueño,<br>
                 Un Objetivo,<br>
                 Una Meta.</h1>
-            <p class="fw-medium">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla eum debitis animi distinctio
+            <p class="fw-medium text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla eum debitis animi distinctio
                 laboriosam porro velit? Aspernatur nisi nesciunt nihil!</p>
             <a href="#" class="btn btn-warning">Contactanos!</a>
         </div>
@@ -62,42 +62,42 @@
     <h2 class="title-prom fw-bold fs-2 bg-dark text-white">¡Promociones del mes!</h2>
     <div class="container-fluid promociones">
         <div class="row p-5">
-            <div class="col-md-4 prom prom1">
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 prom prom1">
                 <h4 class="p-2 fs-3">Promocion</h4>
                 <img src="./imgs/HEADER2-IMG.jpg" alt="" class="img-fluid rounded">
                 <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
                 <h5>US$1250</h5>
                 <a href="#" class="btn btn-warning">Mas info</a>
             </div>
-            <div class="col-md-4 prom prom2">
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 prom prom2">
                 <h4 class="p-2 fs-3">Promocion</h4>
                 <img src="./imgs/HEADER2-IMG.jpg" alt="" class="img-fluid rounded">
                 <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
                 <h5>US$1200</h5>
                 <a href="#" class="btn btn-warning">Mas info</a>
             </div>
-            <div class="col-md-4 prom prom3">
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 prom prom3">
                 <h4 class="p-2 fs-3">Promocion</h4>
                 <img src="./imgs/HEADER2-IMG.jpg" alt="" class="img-fluid rounded">
                 <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
                 <h5>US$1460</h5>
                 <a href="#" class="btn btn-warning">Mas info</a>
             </div>
-            <div class="col-md-4 prom prom4">
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 prom prom4">
                 <h4 class="p-2 fs-3">Promocion</h4>
                 <img src="./imgs/HEADER2-IMG.jpg" alt="" class="img-fluid rounded">
                 <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
                 <h5>US$1300</h5>
                 <a href="#" class="btn btn-warning">Mas info</a>
             </div>
-            <div class="col-md-4 prom prom5">
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 prom prom5">
                 <h4 class="p-2 fs-3">Promocion</h4>
                 <img src="./imgs/HEADER2-IMG.jpg" alt="" class="img-fluid rounded">
                 <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
                 <h5>US$1800</h5>
                 <a href="#" class="btn btn-warning">Mas info</a>
             </div>
-            <div class="col-md-4 prom prom6">
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 prom prom6">
                 <h4 class="p-2 fs-3">Promocion</h4>
                 <img src="./imgs/HEADER2-IMG.jpg" alt="" class="img-fluid rounded">
                 <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
@@ -129,11 +129,6 @@
     </footer>
     <a href="#" class="wsp"></a>
     <!-- Footer fin -->
-
-
-
-
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
