segunda entrega lista

--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
             <h1 class="fw-bold">Un Sueño,<br>
                 Un Objetivo,<br>
                 Una Meta.</h1>
-            <p class="fw-medium text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla eum debitis animi distinctio
-                laboriosam porro velit? Aspernatur nisi nesciunt nihil!</p>
+            <p class="fw-medium text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, non.</p>
             <a href="#" class="btn btn-warning">Contactanos!</a>
         </div>
     </div>
