--- a/pages/login.html
+++ b/pages/login.html
@@ -16,15 +16,15 @@
 
 <body>
     <!-- Navbar inicio -->
-    <nav class="navbar navbar-expand-md navbar-dark nav-total">
+    <header class="navbar navbar-expand-md navbar-dark nav-total">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="../index.html">
                 <img src="../imgs/HORIZONTAL-COLOR-SIN-FONDO-1.png" alt="" class="img-fluid">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-flex justify-content-end" id="collapsibleNavbar">
+            <nav class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link fs-5 fw-bolder" href="../index.html">Inicio</a>
@@ -42,59 +42,26 @@
                         <a class="nav-link fs-5 fw-bolder login" href="./login.html">Login</a>
                     </li>
                 </ul>
-            </div>
+            </nav>
         </div>
-    </nav>
+    </header>
     <!-- Navbar fin -->
-    <!-- Jumbotron inicio  -->
-    <div class="p-5 jumbotron">
-        <div class="call">
-            <h1 class="fw-bold">Un Sueño,<br>
-                Un Objetivo,<br>
-                Una Meta.</h1>
-            <p class="fw-medium">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla eum debitis animi distinctio
-                laboriosam porro velit? Aspernatur nisi nesciunt nihil!</p>
-            <a href="#" class="btn btn-warning">Mas info</a>
+    <!-- Login inicio  -->
+    <section class="sec-log container-fluid">
+        <div class="row d-flex justify-content-center pt-5">
+            <article class="card-log col-xl-8 col-lg-10 col-md-10 col-sm-10">
+                <img src="../imgs/FONDO-BLANCO.png" alt="" class="img-fluid rounded">
+                <form class="form-log" action="" method="post">
+                    <label for="">Usuario</label>
+                    <input type="text" name="" id="">
+                    <label for="">Contraseña</label>
+                    <input type="password" name="" id="">
+                    <input type="submit" value="Ingresar" id="submit-log">
+                </form>
+            </article>
         </div>
-    </div>
-    <!-- Jumbotron fin  -->
-    <!-- Promociones inicio -->
-    <h2 class="title-prom fw-bold fs-2">Promociones</h2>
-    <div class="container-fluid promociones">
-        <div class="row p-5">
-            <div class="col-md-4 prom prom1">
-                <h4>Promocion</h4>
-                <img src="./imgs/HEADER2-IMG.jpg" alt="" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
-            </div>
-            <div class="col-md-4 prom prom2">
-                <h4>Promocion</h4>
-                <img src="./imgs/HEADER2-IMG.jpg" alt="" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
-            </div>
-            <div class="col-md-4 prom prom3">
-                <h4>Promocion</h4>
-                <img src="./imgs/HEADER2-IMG.jpg" alt="" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
-            </div>
-            <div class="col-md-4 prom prom4">
-                <h4>Promocion</h4>
-                <img src="./imgs/HEADER2-IMG.jpg" alt="" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
-            </div>
-            <div class="col-md-4 prom prom5">
-                <h4>Promocion</h4>
-                <img src="./imgs/HEADER2-IMG.jpg" alt="" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
-            </div>
-            <div class="col-md-4 prom prom6">
-                <h4>Promocion</h4>
-                <img src="./imgs/HEADER2-IMG.jpg" alt="" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
-            </div>
-        </div>
-    </div>
-    <!-- Promociones fin -->
+    </section>
+    <!-- Login fin -->
     <!-- Footer inicio -->
     <footer class="bg-black text-white">
         <p class="text-white">Derechos Reservados © 2023 Terra Construcciones</p>
