--- a/pages/products.html
+++ b/pages/products.html
@@ -16,7 +16,7 @@
 
 <body>
     <!-- Navbar inicio -->
-    <nav class="navbar navbar-expand-md navbar-dark nav-total">
+    <header class="navbar navbar-expand-md navbar-dark nav-total">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
                 <img src="../imgs/HORIZONTAL-COLOR-SIN-FONDO-1.png" alt="" class="img-fluid">
@@ -24,7 +24,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-flex justify-content-end" id="collapsibleNavbar">
+            <nav class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link fs-5 fw-bolder" href="../index.html">Inicio</a>
@@ -42,9 +42,9 @@
                         <a class="nav-link fs-5 fw-bolder login" href="./login.html">Login</a>
                     </li>
                 </ul>
-            </div>
+            </nav>
         </div>
-    </nav>
+    </header>
     <!-- Navbar fin -->
     <!-- Jumbotron inicio  -->
     <div class="p-5 jumbotron-prod"></div>
@@ -53,22 +53,22 @@
     <h2 class="title-prom fw-bold fs-2 bg-dark text-white">MINIMALISTA</h2>
     <div class="container-fluid promociones">
         <div class="row p-5">
-            <div class="col-md-4 prom prom1">
-                <h4 class="p-2 fs-3">Promocion</h4>
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 prom prom1">
+                <h4 class="p-2 fs-3">Casa 1</h4>
                 <img src="../imgs/modelo1.jpg" alt="" class="img-fluid">
                 <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
                 <h5>US$1300</h5>
                 <a href="#" class="btn btn-warning">Mas info</a>
             </div>
-            <div class="col-md-4 prom prom2">
-                <h4 class="p-2 fs-3">Promocion</h4>
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 prom prom2">
+                <h4 class="p-2 fs-3">Casa 2</h4>
                 <img src="../imgs/modelo2.jpg" alt="" class="img-fluid">
                 <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
                 <h5>US$1300</h5>
                 <a href="#" class="btn btn-warning">Mas info</a>
             </div>
-            <div class="col-md-4 prom prom3">
-                <h4 class="p-2 fs-3">Promocion</h4>
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 prom prom3">
+                <h4 class="p-2 fs-3">Casa 3</h4>
                 <img src="../imgs/modelo3.jpg" alt="" class="img-fluid">
                 <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
                 <h5>US$1300</h5>
@@ -79,22 +79,22 @@
     <h2 class="title-prom fw-bold fs-2 bg-dark text-white">AMERICANA</h2>
     <div class="container-fluid promociones">
         <div class="row p-5">
-            <div class="col-md-4 prom prom1">
-                <h4 class="p-2 fs-3">Promocion</h4>
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 prom prom1">
+                <h4 class="p-2 fs-3">Casa 1</h4>
                 <img src="../imgs/modelo1.jpg" alt="" class="img-fluid">
                 <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
                 <h5>US$1300</h5>
                 <a href="#" class="btn btn-warning">Mas info</a>
             </div>
-            <div class="col-md-4 prom prom2">
-                <h4 class="p-2 fs-3">Promocion</h4>
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 prom prom2">
+                <h4 class="p-2 fs-3">Casa 2</h4>
                 <img src="../imgs/modelo2.jpg" alt="" class="img-fluid">
                 <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
                 <h5>US$1300</h5>
                 <a href="#" class="btn btn-warning">Mas info</a>
             </div>
-            <div class="col-md-4 prom prom3">
-                <h4 class="p-2 fs-3">Promocion</h4>
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 prom prom3">
+                <h4 class="p-2 fs-3">Casa 3</h4>
                 <img src="../imgs/modelo3.jpg" alt="" class="img-fluid">
                 <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
                 <h5>US$1300</h5>
@@ -105,22 +105,22 @@
     <h2 class="title-prom fw-bold fs-2 bg-dark text-white">CABAÑA</h2>
     <div class="container-fluid promociones">
         <div class="row p-5">
-            <div class="col-md-4 prom prom1">
-                <h4 class="p-2 fs-3">Promocion</h4>
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 prom prom1">
+                <h4 class="p-2 fs-3">Casa 1</h4>
                 <img src="../imgs/modelo1.jpg" alt="" class="img-fluid">
                 <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
                 <h5>US$1300</h5>
                 <a href="#" class="btn btn-warning">Mas info</a>
             </div>
-            <div class="col-md-4 prom prom2">
-                <h4 class="p-2 fs-3">Promocion</h4>
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 prom prom2">
+                <h4 class="p-2 fs-3">Casa 2</h4>
                 <img src="../imgs/modelo2.jpg" alt="" class="img-fluid">
                 <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
                 <h5>US$1300</h5>
                 <a href="#" class="btn btn-warning">Mas info</a>
             </div>
-            <div class="col-md-4 prom prom3">
-                <h4 class="p-2 fs-3">Promocion</h4>
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 prom prom3">
+                <h4 class="p-2 fs-3">Casa 3</h4>
                 <img src="../imgs/modelo3.jpg" alt="" class="img-fluid">
                 <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
                 <h5>US$1300</h5>
@@ -130,8 +130,8 @@
     </div>
     <!-- Promociones fin -->
     <!-- Footer inicio -->
-    <footer class="bg-black">
-        <p>Derechos Reservados © 2023 Terra Construcciones</p>
+    <footer class="bg-black text-white">
+        <p class="text-white">Derechos Reservados © 2023 Terra Construcciones</p>
         <div class="redes">
             <a href="#"></a>
             <i class="fa-brands fa-facebook"></i>
