--- a/pages/us.html
+++ b/pages/us.html
@@ -16,15 +16,15 @@
 
 <body>
     <!-- Navbar inicio -->
-    <nav class="navbar navbar-expand-md navbar-dark nav-total">
+    <header class="navbar navbar-expand-md navbar-dark nav-total">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="../index.html">
                 <img src="../imgs/HORIZONTAL-COLOR-SIN-FONDO-1.png" alt="" class="img-fluid">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-flex justify-content-end" id="collapsibleNavbar">
+            <nav class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link fs-5 fw-bolder" href="../index.html">Inicio</a>
@@ -42,47 +42,21 @@
                         <a class="nav-link fs-5 fw-bolder login" href="./login.html">Login</a>
                     </li>
                 </ul>
-            </div>
+            </nav>
         </div>
-    </nav>
+    </header>
     <!-- Navbar fin -->
-    <!-- Promociones inicio -->
-    <h2 class="title-prom fw-bold fs-2">Promociones</h2>
-    <div class="container-fluid promociones">
-        <div class="row p-5">
-            <div class="col-md-4 prom prom1">
-                <h4>Promocion</h4>
-                <img src="./imgs/HEADER2-IMG.jpg" alt="" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
-            </div>
-            <div class="col-md-4 prom prom2">
-                <h4>Promocion</h4>
-                <img src="./imgs/HEADER2-IMG.jpg" alt="" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
-            </div>
-            <div class="col-md-4 prom prom3">
-                <h4>Promocion</h4>
-                <img src="./imgs/HEADER2-IMG.jpg" alt="" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
-            </div>
-            <div class="col-md-4 prom prom4">
-                <h4>Promocion</h4>
-                <img src="./imgs/HEADER2-IMG.jpg" alt="" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
-            </div>
-            <div class="col-md-4 prom prom5">
-                <h4>Promocion</h4>
-                <img src="./imgs/HEADER2-IMG.jpg" alt="" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
-            </div>
-            <div class="col-md-4 prom prom6">
-                <h4>Promocion</h4>
-                <img src="./imgs/HEADER2-IMG.jpg" alt="" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, vitae!</p>
-            </div>
+    <!-- Sobre Nosotros inicio -->
+    <section class="container-fluid sec-us">
+        <div class="row p-5 text-center d-flex justify-content-center">
+            <article class="card-us col-xl-8 col-lg-10 col-md-10 col-sm-12">
+                <img src="../imgs/HEADER-IMG.jpg" alt="" class="img-fluid rounded">
+                <h1 class="card-title-us pt-3">Sobre Nosotros</h1>
+                <p class="card-desc p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo itaque vitae molestiae laborum expedita corporis fugiat nemo laudantium officia cumque repudiandae facilis laboriosam dicta impedit ullam minima ex consequuntur commodi rem aut in, a placeat! Voluptas sequi dolore ipsum, a modi pariatur, fugit cupiditate nihil optio doloremque eum inventore earum vitae maxime porro perspiciatis itaque dolor laborum odio fuga, odit nesciunt obcaecati eaque asperiores? Architecto eveniet laboriosam voluptate sapiente quia doloremque sit beatae et nemo voluptatibus natus, minima ut sequi magnam repellat. Quo optio hic sed! Nobis sapiente sed sunt, molestias optio excepturi provident impedit, cumque consectetur rem magnam perferendis quam dolorem id nulla cum. Alias tempore nam omnis fuga, nostrum, optio ipsam molestias fugiat ab id facere, quae ratione.</p>
+            </article>
         </div>
-    </div>
-    <!-- Promociones fin -->
+    </section>    
+    <!-- Sobre Nosotros fin -->
     <!-- Footer inicio -->
     <footer class="bg-black text-white">
         <p class="text-white">Derechos Reservados © 2023 Terra Construcciones</p>
@@ -103,14 +77,8 @@
             <i class="fa-brands fa-instagram"></i>
         </div>
     </footer>
-    <a href="#" class="wsp"></a>
+    <a href="#" class="up"></a>
     <!-- Footer fin -->
-
-
-
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
